# circom-bp

./: Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: test.yml
circuits/: .gitignore  simpleCheck.circom  simpleCheck_inputs.json
circuits/multiplier2_cpp/: multiplier2.cpp
circuits/multiplier2_js/: multiplier2.wasm
src/: conversion.rs  main.rs
