[package]
name = "circom-bp"
version = "0.1.0"
edition = "2024"

[dependencies]
bulletproofs = { git = "https://github.com/l-adic/bulletproofs", branch = "weird-build" }
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat.git", rev = "09e92d4" }
ark-bn254 = { version = "0.5.0" }
ark-ff = "0.5.0"
thiserror = "1.0"
spongefish = {git = "https://github.com/arkworks-rs/spongefish" , ref = "3ded547", features = ["arkworks-algebra"]}
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
ark-relations = { git = "https://github.com/arkworks-rs/snark.git" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16.git" }
ark-secp256k1 = { git = "https://github.com/arkworks-rs/algebra.git" }
